apps/tpi-1/service-stubs/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: default
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/affinity: "remote"
    service.cilium.io/global-sync-endpoint-slices: "true"
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 32400
    protocol: TCP
    targetPort: http
  type: ClusterIP
