apps/tpi-1/service-stubs/plex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plex
  namespace: default
  labels:
    homelab.wahoo.li/exposure: public
spec:
  parentRefs:
  - name: envoy-gw
    namespace: envoy-gateway-system
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "plex.${domain_absolutist_it:=absolutist.it}"
  - "plex.${domain_wahoo_li:=wahoo.li}"
  rules:
  # Root — no cache
  - backendRefs:
    - name: plex
      port: 32400
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Cache-Control
          value: "no-cache, no-store, must-revalidate"
        - name: Pragma
          value: "no-cache"
    matches:
    - path:
        type: Exact
        value: /
  # Everything else — default
  - backendRefs:
    - name: plex
      port: 32400
